<resources>
    <string name="app_name">Möle</string>
    <string name="title_activity_splash">SpashActivity</string>
    <string name="title_activity_add_new_mole">Add New Mole</string>

    // Alerts
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="alert_message">Are you sure you want to discard?</string>
    <string name="alert_title">Hold On!</string>

    // Splash screen
    <string name="logo_desc">DeltaHacks V Splash image</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="action_settings">Settings</string>

    // Profile fragment
    <string name="profile">Profile</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    // Menu
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <string-array name="sex_type">
        <item>Male</item>
        <item>Female</item>
        <item>Not Listed Above</item>
    </string-array>

    // Mole Profile fragmnet
    <string name="location_on_body">Location on Body </string>
    <string name="mole_nickname">Mole Nickname </string>
    <string name="timestamp_text">Date Taken </string>
    <string name="details">Details </string>
    <string name="more_info">Learn More</string>


    // permissions
    <string name="okay">OK</string>

    <string name="title_camera_permission">Camera Permissions</string>
    <string name="text_camera_permission">We need permissions to use your camera so that you can add a picture.</string>

    <string name="title_storage_permission">Storage Permissions</string>
    <string name="text_storage_permission">We need permissions to write to your phone so the pictures can be saved.</string>


</resources>
