<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:id="@+id/profile_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/age_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_below="@+id/profile_title"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/age_spinner"
            android:layout_width="185dp"
            android:layout_height="56dp"
            android:layout_below="@+id/age_title"
            android:layout_centerInParent="true"
            android:elevation="5dp"
            android:popupBackground="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sex_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="@android:color/black"
            android:layout_below="@+id/age_spinner"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/sex_spinner"
            android:layout_width="185dp"
            android:layout_height="56dp"
            android:layout_below="@+id/sex_title"
            android:layout_centerInParent="true"
            android:elevation="5dp"
            android:popupBackground="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:layout_below="@+id/sex_spinner"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="26dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textCapWords"
            android:selectAllOnFocus="false"
            android:layout_below="@+id/email_title"
            android:singleLine="true"
            android:textSize="18sp"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/password_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:layout_below="@+id/email_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="26dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textCapWords"
            android:selectAllOnFocus="false"
            android:layout_below="@+id/password_title"
            android:singleLine="true"
            android:textSize="18sp"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="26dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textCapWords"
            android:selectAllOnFocus="false"
            android:layout_below="@+id/password"
            android:singleLine="true"
            android:textSize="18sp"
            tools:targetApi="o" />
    </RelativeLayout>


</FrameLayout>